[package]
name = "runng-test"
version = "0.1.0"
authors = ["Your Name <email@example.com>"]
edition = "2018"


[[bin]]

	name = "peera"
	path = "src/peera.rs"


[[bin]]

	name = "peerb"
	path = "src/peerb.rs"


[[bin]]

	name = "peerc"
	path = "src/peerc.rs"


[lib]

	name = "libpeers"
	path = "src/libpeers.rs"


[dependencies]

	actix   = "*"
	failure = "*"
	runng   = "*"
	futures = "*"
